--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,4 @@
-/* Estilo Geral */
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
@@ -7,7 +7,7 @@ body {
     box-sizing: border-box; /* Inclui padding e border na largura e altura dos elementos */
 }
 
-/* Cabeçalho */
+
 header {
     background-color: #343a40;
     color: #fff;
@@ -24,10 +24,9 @@ header {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
-    display: block; /* Faz o botão ocupar toda a largura disponível */
-    margin: 20px auto; /* Centraliza o botão horizontalmente */
-    max-width: 200px; /* Define uma largura máxima */
-}
+    display: block; 
+    margin: 20px auto; 
+    max-width: 200px;
 
 #btnLimparLista:hover {
     background-color: #c82333;
@@ -38,14 +37,14 @@ header {
     margin-top: 20px;
     border-radius: 8px;
     overflow: hidden;
-    width: 100%; /* Garante que a tabela ocupe toda a largura disponível */
-    border-collapse: collapse; /* Remove espaçamento entre células */
+    width: 100%; 
+    border-collapse: collapse; 
 }
 
 /* Cabeçalhos e Células da Tabela */
 .table th, .table td {
     text-align: center;
-    padding: 12px; /* Adiciona padding para melhor espaçamento */
+    padding: 12px; 
 }
 
 /* Cabeçalhos da Tabela */
@@ -109,18 +108,17 @@ header {
 
 /* Media Queries */
 
-/* Telas pequenas (móveis) */
+
 @media (max-width: 576px) {
-    /* Ajusta padding do cabeçalho */
     header {
         padding: 10px;
     }
 
-    /* Ajusta o tamanho dos botões e a largura máxima */
+
     #btnLimparLista {
         padding: 8px 16px;
         font-size: 0.875rem;
-        max-width: 100%; /* Permite que o botão ocupe toda a largura da tela */
+        max-width: 100%; 
     }
 
     /* Ajusta o padding das células da tabela */
@@ -131,27 +129,27 @@ header {
 
     /* Ajusta o layout da tabela */
     .table {
-        font-size: 0.875rem; /* Reduz o tamanho da fonte */
+        font-size: 0.875rem;
     }
 }
 
-/* Telas médias (tablets) */
+
 @media (min-width: 577px) and (max-width: 768px) {
-    /* Ajusta o tamanho dos botões e padding */
+
     #btnLimparLista {
         padding: 10px 20px;
         font-size: 1rem;
     }
 
-    /* Ajusta o padding das células da tabela */
+
     .table th, .table td {
         padding: 10px;
     }
 }
 
-/* Telas grandes (desktops) */
+
 @media (min-width: 769px) {
-    /* Ajusta o tamanho dos botões e padding */
+
     #btnLimparLista {
         padding: 10px 20px;
         font-size: 1rem;
