--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ i{
 }
 
 span{
-    color: #55a19e;
+    color: #ad1313;
 }
 
 
@@ -35,28 +35,44 @@ span{
     flex-direction: column;
     width: 50%;
     margin: 0 auto;
-    background-color: #27555e;
-    height: 760px;
+    background: #212121;
+    box-shadow: 15px 15px 30px rgb(25, 25, 25),
+                -15px -15px 30px rgb(60, 60, 60);    
+                height: 760px;
     border-radius: 25px;
     padding: 15px;
 }
 h2{
     color: #fff;
-    border-bottom: 2px solid #284a5b;
+    border-bottom: 2px solid #b95a00;
     text-align: center;
     padding: 15px;
     font-weight: bold;
     font-weight: 200;
 }
-
 input{
-    padding: 0.5rem;
+    border: none;
+    outline: none;
+   margin: 0 auto;
+    border-radius: 15px;
     width: 50%;
-    height: 30px;
-    margin: 0 auto;
-    border-radius: 35px;
-    border: 1px solid transparent;
+    padding: 0.5em;
+    background-color: #ccc;
+    -webkit-box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
+            box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
+    -webkit-transition: 300ms ease-in-out;
+    transition: 400ms ease-in-out;
 }
+
+input:focus {
+    background-color: white;
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+    -webkit-box-shadow:  3px 3px 30px #969696,
+               -3px -3px 30px #1a1818;
+          
+  } 
 
 label{
     color:#ccc;
@@ -83,20 +99,72 @@ input[type="date"]{
     margin: 15px auto;
 }
 
-input[type="submit"]{
-    background-color: #55a19e;
-    color: #fff;
-    text-align: center;
-    padding-top: 2px;
-    font-weight: bold;
-    border: 1px solid #fff;
-}
-
-input[type="submit"]:hover{
-    background-color: transparent;
+/* From Uiverse.io by cssbuttons-io */ 
+button {
+    appearance: button;
+    background-color: #e47418;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
     cursor: pointer;
-    transition: 0.3s;
-}
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: .8px;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 13px 19px;
+    text-align: center;
+    text-transform: uppercase;
+    touch-action: manipulation;
+    transform: translateZ(0);
+    transition: filter .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+   }
+   
+   button:after {
+    background-clip: padding-box;
+    background-color: #9c4003;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    bottom: -4px;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+   }
+   
+   button:main, button:focus {
+    user-select: auto;
+   }
+   
+   button:hover:not(:disabled) {
+    filter: brightness(1.1);
+   }
+   
+   button:disabled {
+    cursor: auto;
+   }
+   
+   button:active:after {
+    border-width: 0 0 0px;
+   }
+   
+   button:active {
+    padding-bottom: 10px;
+   }
+
+ 
 
 /* Estilos para a confirmação */
 .oculto {
@@ -140,76 +208,3 @@ input[type="submit"]:hover{
     opacity: 1;
 }
 
-/* Media queries para responsividade */
-@media (max-width: 768px) {
-    #formAgendamento {
-        width: 90%;
-        height: auto;
-    }
-
-    input, select {
-        width: 90%;
-    }
-
-    header {
-        font-size: 1.2rem;
-        padding-bottom: 30px;
-    }
-
-    h2 {
-        font-size: 1.5rem;
-    }
-
-    label {
-        font-size: 18px;
-    }
-
-    .confirmacao {
-        font-size: 1.5em;
-        padding: 30px;
-    }
-
-    .confirmacao img {
-        width: 80px;
-    }
-}
-
-@media (max-width: 480px) {
-    header {
-        font-size: 1rem;
-        padding-bottom: 20px;
-    }
-
-    h2 {
-        font-size: 1.2rem;
-    }
-
-    input, select {
-        width: 100%;
-    }
-
-    label {
-        font-size: 16px;
-    }
-
-    .confirmacao {
-        font-size: 1.2em;
-        padding: 20px;
-    }
-
-    .confirmacao img {
-        width: 60px;
-    }
-}
-
-
-th{
-    color: #fff;
-    font-size: 25px;
-}
-
-tbody{
-    color: #fff;
-    background-color: #ccc;
-
-}
