--- a/css/admin.css
+++ b/css/admin.css
@@ -1,36 +1,21 @@
-
+/* Estilo Geral */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa;
+    background-color: #000000;
     margin: 0;
     padding: 0;
     box-sizing: border-box; /* Inclui padding e border na largura e altura dos elementos */
 }
 
-
+/* Cabeçalho */
 header {
     background-color: #343a40;
-    color: #fff;
+    color: #020202;
     padding: 15px;
     text-align: center; /* Centraliza o texto no cabeçalho */
 }
 
-/* Botão Limpar Lista */
-#btnLimparLista {
-    background-color: #dc3545;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    display: block; 
-    margin: 20px auto; 
-    max-width: 200px;
 
-#btnLimparLista:hover {
-    background-color: #c82333;
-}
 
 /* Tabela */
 .table {
@@ -38,7 +23,7 @@ header {
     border-radius: 8px;
     overflow: hidden;
     width: 100%; 
-    border-collapse: collapse; 
+    border-collapse: collapse;
 }
 
 /* Cabeçalhos e Células da Tabela */
@@ -67,10 +52,7 @@ header {
     background-color: #dee2e6;
 }
 
-/* Células da Tabela */
-.table td {
-    color: #495057;
-}
+
 
 /* Botões de Ação */
 .btn-acao {
@@ -80,17 +62,9 @@ header {
     border-radius: 5px;
     cursor: pointer;
     font-size: 0.875rem;
-    display: inline-block; /* Faz os botões ficarem na mesma linha, se possível */
+    display: inline-block; 
 }
 
-.btn-finalizado {
-    background-color: #28a745;
-    color: #fff;
-}
-
-.btn-finalizado:hover {
-    background-color: #218838;
-}
 
 .btn-excluir {
     background-color: #dc3545;
@@ -101,57 +75,4 @@ header {
     background-color: #c82333;
 }
 
-/* Mensagem de Estado */
-.text-center {
-    text-align: center;
-}
 
-/* Media Queries */
-
-
-@media (max-width: 576px) {
-    header {
-        padding: 10px;
-    }
-
-
-    #btnLimparLista {
-        padding: 8px 16px;
-        font-size: 0.875rem;
-        max-width: 100%; 
-    }
-
-    /* Ajusta o padding das células da tabela */
-    .table th, .table td {
-        padding: 8px;
-        font-size: 0.875rem;
-    }
-
-    /* Ajusta o layout da tabela */
-    .table {
-        font-size: 0.875rem;
-    }
-}
-
-
-@media (min-width: 577px) and (max-width: 768px) {
-
-    #btnLimparLista {
-        padding: 10px 20px;
-        font-size: 1rem;
-    }
-
-
-    .table th, .table td {
-        padding: 10px;
-    }
-}
-
-
-@media (min-width: 769px) {
-
-    #btnLimparLista {
-        padding: 10px 20px;
-        font-size: 1rem;
-    }
-}
