--- a/css/admin.css
+++ b/css/admin.css
@@ -1,108 +1,163 @@
-/* Estilo Geral */
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #000000;
-    margin: 0;
+* {
     padding: 0;
-    box-sizing: border-box; /* Inclui padding e border na largura e altura dos elementos */
+    margin: 0;
+    box-sizing: border-box;
 }
-
-/* Cabeçalho */
+body {
+    background-color: #000300;
+}
 header {
-    background-color: #343a40;
-    color: #020202;
-    padding: 15px;
-    text-align: center; /* Centraliza o texto no cabeçalho */
-}
-
-
-
-/* Tabela */
-.table {
-    margin-top: 20px;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 100%; 
-    border-collapse: collapse;
-}
-
-/* Cabeçalhos e Células da Tabela */
-.table th, .table td {
+    color: #fff;
+    display: flex;
     text-align: center;
-    padding: 12px; 
+    justify-content: center;
+    padding-bottom: 45px;
+    padding-top: 25px;
+    font-style: italic;
 }
-
-/* Cabeçalhos da Tabela */
-.table th {
-    background-color: #343a40;
+i {
+    font-size: 20px;
+}
+span {
+    color: #ad1313;
+}
+/*FORMULÁRIO DE AGENDAMENTO*/
+#formAgendamento {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+    background: #212121;
+    box-shadow: 15px 15px 30px rgb(25, 25, 25),
+                -15px -15px 30px rgb(60, 60, 60);
+    height: 760px;
+    border-radius: 25px;
+    padding: 15px;
+}
+h2 {
     color: #fff;
+    border-bottom: 2px solid #b95a00;
+    text-align: center;
+    padding: 15px;
     font-weight: bold;
+    font-weight: 200;
 }
-
-/* Linhas Alternadas da Tabela */
-.table-striped tbody tr:nth-of-type(odd) {
-    background-color: #f9f9f9;
-}
-
-.table-striped tbody tr:nth-of-type(even) {
-    background-color: #e9ecef;
-}
-
-.table-hover tbody tr:hover {
-    background-color: #dee2e6;
-}
-
-
-
-/* Botões de Ação */
-.btn-acao {
-    margin: 0 5px;
-    padding: 5px 10px;
+input {
     border: none;
-    border-radius: 5px;
+    outline: none;
+    margin: 0 auto;
+    border-radius: 15px;
+    width: 50%;
+    padding: 0.5em;
+    background-color: #ccc;
+    box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.3);
+    transition: 400ms ease-in-out;
+}
+input:focus {
+    background-color: white;
+    transform: scale(1.05);
+    box-shadow: 3px 3px 30px #969696,
+                -3px -3px 30px #1a1818;
+}
+label {
+    color: #ccc;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+select {
+    width: 50%;
+    margin: 15px auto;
+    padding: 0.5rem;
+    border-radius: 15px;
+    border: 1px solid transparent;
+}
+.alert-danger {
+    margin: 25px;
+    padding: 5px;
+    font-size: 12px;
+}
+input[type="date"] {
+    margin: 15px auto;
+}
+/* Botão */
+button {
+    appearance: button;
+    background-color: #e47418;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    color: #FFFFFF;
     cursor: pointer;
-    font-size: 0.875rem;
-    display: inline-block; 
+    font-size: 15px;
+    font-weight: 700;
+    padding: 13px 19px;
+    text-transform: uppercase;
+    transition: filter 0.2s;
 }
-
-
-.btn-excluir {
-    background-color: #dc3545;
-    color: #fff;
+button:after {
+    background-color: #9c4003;
+    border-radius: 16px;
+    bottom: -4px;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
 }
-
-.btn-excluir:hover {
-    background-color: #c82333;
+button:hover:not(:disabled) {
+    filter: brightness(1.1);
 }
-
-
+/* Estilos para a confirmação */
+.oculto {
+    display: none;
+}
+.confirmacao {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 128, 0, 0.9);
+    color: white;
+    padding: 50px;
+    border-radius: 120px;
+    text-align: center;
+    font-size: 2em;
+    z-index: 9999;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+.confirmacao img {
+    width: 100px;
+    display: block;
+    justify-content: center;
+    margin: 0 auto;
+}
+.ativo {
+    display: block;
+    opacity: 1;
+}
 /* Responsividade para telas móveis */
 @media (max-width: 768px) {
     #formAgendamento {
         width: 90%;
         height: auto;
     }
-
     input, select {
         width: 100%;
     }
-
     h2 {
         font-size: 1.5em;
     }
-
     button {
         width: 100%;
         font-size: 14px;
     }
-
     label {
         font-size: 16px;
     }
-
     .confirmacao {
         padding: 20px;
         font-size: 1.5em;
     }
-}
-
